# game-of-life

./: .gitignore  CMakeLists.txt  Makefile  README.md  readme.md
include/: Model.hpp  hello.hpp
src/: Model.cpp  gol_main.cpp  hello.cpp  main.cpp
test/: HelloTest.cpp  TestgetNeighbor.cpp
